# stays

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  lint.yml  publish.yml  test-live.yml  test.yml
stays/: __init__.py  serialize.py
stays/cli/: __init__.py  _app.py  _console.py  _entry.py  _enums.py  _render.py  _runtime.py  _serialize.py  _validate.py
stays/cli/commands/: details.py  enrich.py  mcp.py  search.py  setup.py
stays/mcp/: __init__.py  _config.py  _entry.py  _executors.py  _params.py  server.py
stays/mcp/setup/: __init__.py  _adapters.py  _backend.py  chatgpt.py  claude.py  codex.py
stays/models/: __init__.py
stays/models/google_hotels/: __init__.py  base.py  detail.py  hotels.py  policy.py  result.py
stays/search/: __init__.py  client.py  hotels.py  parse.py
stays/search/parse/: __init__.py  detail_parser.py  policy_parser.py  provider_parser.py  search_parser.py  slots.py
tests/: live_framework.py  test_cli_details.py  test_cli_enrich.py  test_cli_entry.py  test_cli_envelope_golden.py  test_cli_live.py  test_cli_render.py  test_cli_search.py  test_cli_serialize.py  test_cli_setup.py  test_cli_subcommands.py  test_cli_validate.py  test_client_rate_limiter.py  test_detail_live.py  test_detail_parse.py  test_hotel_live.py  test_hotel_serializer.py  test_init.py  test_mcp_entry.py  test_mcp_live.py  test_mcp_server.py  test_mcp_stdio_smoke.py  test_parse_golden.py  test_policy.py  test_result_parse.py  test_search_client.py  test_search_hotels.py  test_search_live.py  test_search_sort_post_sort.py  test_serialize_golden.py  test_setup_backends.py
tests/browser_verification/: README.md  cases.py  drivers.py  harness.py  test_browser_match.py  test_cli_vs_browser.py
tests/fixtures/: cli_envelope_details_happy.json  cli_envelope_details_happy.jsonl  cli_envelope_details_happy.txt  cli_envelope_details_validation_error.json  cli_envelope_details_validation_error.jsonl  cli_envelope_details_validation_error.txt  cli_envelope_enrich_happy.json  cli_envelope_enrich_happy.jsonl  cli_envelope_enrich_happy.txt  cli_envelope_enrich_validation_error.json  cli_envelope_enrich_validation_error.jsonl  cli_envelope_search_happy.json  cli_envelope_search_happy.jsonl  cli_envelope_search_happy.txt  cli_envelope_search_validation_error.json  cli_envelope_search_validation_error.jsonl  cli_envelope_search_validation_error.txt  cli_hotel_sample.py  detail_response_sample.json  parse_golden_detail.json  parse_golden_search.json  prompt_when_to_deep_search.txt  search_response_nyc.json  serialize_golden_detail.json  serialize_golden_mcp_detail.json  serialize_golden_mcp_result.json  serialize_golden_result.json
