[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stays"
version = "0.1.0"
description = "Google Hotels MCP server and Python library — reverse-engineered batchexecute client with FastMCP tools"
authors = [
    { name = "Himank Yadav", email = "him229@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["hotels", "google-hotels", "travel", "mcp", "hotel-search", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "pydantic>=2.10",
    "curl-cffi>=0.7.4",
    "ratelimit>=2.2.1",
    "tenacity>=9.0.0",
    "typer>=0.15",
    "rich>=13,<15",
    # MCP server runtime — shipped in core so `pipx install stays` and
    # `uv tool install stays` give a fully functional CLI + MCP server
    # out of the box. fastmcp >=3.2 for readOnlyHint/idempotentHint
    # tool annotations; <5 guards against the next major.
    "fastmcp>=3.2,<5",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.2",
    "pytest-xdist>=3.6.1",
    "pytest-rerunfailures>=14.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "twine>=6.0.0",
    "pre-commit>=4.0",
]

[project.scripts]
stays = "stays.cli._entry:run"

[project.urls]
Homepage = "https://github.com/him229/stays"
Repository = "https://github.com/him229/stays"
Issues = "https://github.com/him229/stays/issues"
Changelog = "https://github.com/him229/stays/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["stays"]

[tool.hatch.build.targets.sdist]
include = [
    "stays",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "live: marks tests that hit google.com — requires network",
    "slow: marks tests that are slow (rate-limiter unit tests)",
    "browser_verify: browser-vs-MCP verification suite; opt-in via --browser-verify",
]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
branch = true
source = ["stays"]
omit = [
    "stays/cli/_entry.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 1
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
include = [
    "stays/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
]
exclude = [
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]  # long lines acceptable in test fixtures
"scripts/**/*.py" = ["T201", "E501", "B007"]
"stays/mcp/server.py" = ["E501"]  # tool descriptions and LLM guidance live here

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
